# boardwalk

./: .dockerignore  .gitignore  .snyk  ATTRIBUTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  semgrep-rules.yml  setup.cfg  slack_app_manifest.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/poetry_project_setup/: action.yml
.github/actions/project_setup/: action.yml
.github/workflows/: ci_suite.yml  make-test.yml  semgrep.yml  sphinx.yml
diagrams/: _d2_configuration.d2  architecture.d2  conceptual_overview.d2
docs/: Boardwalkfile.py  Makefile  build_cli_help_pages.sh  requirements.txt
docs/source/: conf.py  development_notes.md  index.md  installation.md  overview.md
docs/source/_img/: diagrams
docs/source/_static/: custom.css
docs/source/apidocs/: index.rst
docs/source/apidocs/boardwalk/: boardwalk.__main__.md  boardwalk.ansible.md  boardwalk.app_exceptions.md  boardwalk.cli.md  boardwalk.cli_catch.md  boardwalk.cli_init.md  boardwalk.cli_login.md  boardwalk.cli_run.md  boardwalk.cli_workspace.md  boardwalk.host.md  boardwalk.manifest.md  boardwalk.md  boardwalk.state.md  boardwalk.utils.md
docs/source/apidocs/boardwalkd/: boardwalkd.__main__.md  boardwalkd.broadcast.md  boardwalkd.cli.md  boardwalkd.md  boardwalkd.protocol.md  boardwalkd.server.md  boardwalkd.slack.md  boardwalkd.state.md
docs/source/cli_helpdocs/: index.md
docs/source/cli_helpdocs/boardwalk/: boardwalk.md  boardwalk_catch.md  boardwalk_check.md  boardwalk_init.md  boardwalk_login.md  boardwalk_release.md  boardwalk_run.md  boardwalk_version.md  boardwalk_workspace.md  boardwalk_workspace_dump.md  boardwalk_workspace_list.md  boardwalk_workspace_reset.md  boardwalk_workspace_show.md  boardwalk_workspace_use.md  index.md
docs/source/cli_helpdocs/boardwalkd/: boardwalkd.md  boardwalkd_serve.md  boardwalkd_version.md  index.md
src/boardwalk/: README.md  __init__.py  __main__.py  ansible.py  app_exceptions.py  cli.py  cli_catch.py  cli_init.py  cli_login.py  cli_run.py  cli_workspace.py  exceptions.py  host.py  log.py  manifest.py  state.py  utils.py
src/boardwalkd/: README.md  __init__.py  __main__.py  auth_prompts.py  broadcast.py  cli.py  dashboard.py  demo.py  protocol.py  server.py  slack.py  slack_error_advice.py  snapshot.py  state.py  utils.py
src/boardwalkd/static/: boardwalkd.css  boardwalkd.js
src/boardwalkd/templates/: admin.html  admin_user_enable.html  admin_user_roles.html  base.html  index.html  index_workspace.html  index_workspace_catch.html  index_workspace_release.html  index_workspace_remote_mutex_clear.html  index_workspace_remote_state_clear.html  workspace_events.html  workspace_events_table.html
test/: ansible-lint.yaml  conftest.py  semgrep-rules.yml  z.dummy_playbook_for_ansible_lint.yml
test/boardwalk/: test_boardwalk_cli.py  test_cli_run.py  test_cli_workspace.py  test_manifest.py  test_utils.py
test/boardwalkd/: test_api.py  test_auth_login_context.py  test_auth_prompts.py  test_boardwalkd_cli.py  test_boardwalkd_js.mjs  test_boardwalkd_morph.mjs  test_broadcast.py  test_dashboard.py  test_demo.py  test_protocol.py  test_server.py  test_snapshot.py
test/integration/: test_workspaces.py
test/server-client/: Boardwalkfile.py  ansible.cfg  malformed_playbook.yml  playbook-job-test-should-be-skipped.yml  playbook-job-test-should-fail.yml  playbook-job-test-should-succeed.yml  slack-error-advice.toml  test-inventory
test/server-client/playbooks/: playbook-job-test-echo-variable.yml
test/server-client/pylib/: dynamically_constructed_workspaces.py  regression_bz_svreng_609.py  remote_state_set_unsuccessful_during_active_workflow.py
test/server-client/tasks/: ensure-remote-workflow-success-state-false-during-run.yml
typings/ansible_runner/: __init__.pyi  __main__.pyi  cleanup.pyi  defaults.pyi  exceptions.pyi  interface.pyi  loader.pyi  output.pyi  runner.pyi  runner_config.pyi  streaming.pyi
typings/ansible_runner/config/: _base.pyi  ansible_cfg.pyi  command.pyi  doc.pyi  inventory.pyi  runner.pyi
typings/ansible_runner/utils/: __init__.pyi  base64io.pyi  capacity.pyi  streaming.pyi
typings/email_validator/: __init__.pyi
