[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "boardwalk"
description = "Boardwalk is a linear Ansible workflow engine"
readme = "README.md"
version = "0.9.2"
requires-python = ">=3.13, <4"
license = "MIT"
license-files = ["LICENSE", "ATTRIBUTIONS.md"]
authors = [
    {name="Mat Hornbeek", email="84995001+m4wh6k@users.noreply.github.com"},
]
maintainers = [
    {name="Kiera Phoenix", email="115666116+asullivan-blze@users.noreply.github.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]

dependencies = [
    # Required by slack-bolt's AsyncApp
    "aiohttp >=3.12.12, <4",
    # Required by pydantic to validate emails using EmailStr
    "email-validator >=1.3.0",
    "ansible-runner >=2.3.0",
    "click >=8.4.0",
    "cryptography >=38.0.3",
    "loguru >=0.7.3",
    "pydantic >=2.4.2",
    "slack-bolt >=1.21.3,<2",
    "tornado >=6.4.2",
    "rich >=15.0.0",
]

[project.scripts]
boardwalk = "boardwalk.cli:cli"
boardwalkd = "boardwalkd.cli:cli"

[project.urls]
repository = "https://github.com/Backblaze/boardwalk"
"Issues" = "https://github.com/Backblaze/boardwalk/issues"

# -- Package and dependencies, configured with uv -------------------------
# https://docs.astral.sh/uv/

[tool.uv]
preview-features = ["malware-check"]

[tool.uv.build-backend]
module-root = "src"
module-name = [
    "boardwalk",
    "boardwalkd",
]
source-include = [
    "test/**",
    "typings/**",
]

[dependency-groups]
dev = [
    "anyio >= 4.7.0, <5",
    "pyright >= 1.1.350",
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ansible-lint >= v26.4.0",
    "ruff >= 0.11.13, <0.12",
]
test = [
    "pytest >= 9.0.3, <10",
]
docs = [
    "myst-parser[linkify]>=5.1.0,<6",
    "rich-click >=1.8.5, <2",
    "sphinx >=8.1.3, <9",
    "sphinx-book-theme >=1.1.3, <2",
    "sphinx-autobuild >=2024.10.3, <2025",
    "sphinx-autodoc2 >=0.5.0, <0.6",
    "sphinx-copybutton >=0.5.2, <0.6",
]

# -- Configuration for Ruff ---------------------------------------------------
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 120
extend-exclude = [
    "typings/*",
]
lint.extend-select = [
    "I",            # isort (import sorting)
    "W",            # pycodestyle warnings
    "UP",           # pyupgrade
    "DTZ",          # flake8-datetimez
]

# -- Typechecking (currently pyright) -----------------------------------------
[tool.pyright]
exclude = [
    "build/",
    "dist/",
    "typings/",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
]
pythonPlatform = "All"
reportImportCycles = false
reportMissingTypeStubs = false
# Use basic type-checking for now, until strict type checking can be fixed again
typeCheckingMode = "basic"
