[metadata]
name = boardwalk
version = file: VERSION
author = Mat Hornbeek (Backblaze, Inc.)
author_email = 84995001+m4wh6k@users.noreply.github.com
description = Boardwalk is a linear Ansible workflow engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Backblaze/boardwalk
project_urls =
    Bug Tracker = https://github.com/Backblaze/boardwalk/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
python_requires = >=3.10
install_requires =
    ansible >=6.5.0
    ansible-runner >=2.3.0
    click >=8.1.3
    cryptography >=38.0.3
    # Required by pydantic to validate emails using EmailStr
    email-validator >=1.3.0
    pydantic >=1.1.275
    tornado >=6.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        boardwalk = boardwalk.cli:cli
        boardwalkd = boardwalkd.cli:cli

[options.package_data]
boardwalk = py.typed
boardwalkd = static/*.css, static/*.js, templates/*.html, py.typed
